package br.com.ajf.learnjavadesignpatterns.state;

public interface State
{
	void executeAction(Context context);
}
